[package]
name = "klo"
version = "0.1.0-alpha"
authors = ["Karl Grasegger <51945878+grasegger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.4" }
log = "0.4.14"
simple_logger = { version = "1.13.0", features = ["stderr"] }
regex = "1"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
rayon = "1.5"
serde = "1.0.130"
serde_json = "1.0.67"
rand = "0.8.4"